# gridfinity_build123d

./: pyproject.toml
.makerrepo/: config.yaml
docs/assets/: image_gen.py
mr_exports/: __init__.py  gridfinity.py
src/gridfinity_build123d/: __init__.py  features.py
tests/: test_int_refined.py  test_unit_features.py
